--- a/src/classes/DonorClassificationRollups.cls
+++ b/src/classes/DonorClassificationRollups.cls
@@ -154,13 +154,18 @@ public with sharing class DonorClassificationRollups {
                         }
 
                         Double lastYearGiving = 0;
-		        Date todaysDate = Date.today().addYears(-1);
+                        Date todaysDate = Date.today();
+		        Date aYearAgo = Date.today().addYears(-1);
                         // override
                         if(!alwaysMajorDonor) {
-                          // 'Major Donor' means > 1000 dollars giving in the last calendar year
-                          Integer lastYear = todaysDate.year();
+                          // 'Major Donor' means > 1000 dollars giving in the 12 months preceeding current year
+                          //Integer lastYear = todaysDate.year();
                           for(Opportunity opp: contactsAndDonations.get(c)) {
-                            if(opp.closeDate.year() == lastYear) {
+                            //if(opp.closeDate.year() == lastYear) {
+                            System.debug(' ********* opp date: '+opp.CloseDate+', a year ago: '+aYearAgo+', today: '+todaysDate);
+                            System.debug(' ********* Days between a year ago: '+opp.closeDate.daysBetween(AYearAgo));
+                            System.debug(' ********* Days between today: '+opp.closeDate.daysBetween(today));
+                            if(opp.closeDate.daysBetween(AYearAgo) < 0 and opp.closeDate.daysBetween(todaysDate) >= 0) {
                               lastYearGiving += opp.Amount;
                               System.debug(' ********* total giving for donor, opp amount: '+lastYearGiving+', '+opp.Amount);
                             }
@@ -452,7 +457,8 @@ public with sharing class DonorClassificationRollups {
                 List<Opportunity> opps = new List<Opportunity>();
 
                 // Test Monthly Donor
-                today = Date.today().addYears(-1);
+                //today = Date.today().addYears(-1);
+                today = Date.today().addDays(-180);
                 opps = new List<Opportunity>();
                 for(Integer i=0; i<3; i++) {
                	  Opportunity opp = new Opportunity(Name = 'Test Donation');
